--- a/aps.css
+++ b/aps.css
@@ -73,7 +73,7 @@ body {font-family: Lexend,sans-serif;font-size: 14px;font-weight: 400;background
 
 /* Back To Top*/
 #toTop{position: fixed;bottom: 10px;right: 10px;cursor: pointer;display: none;background: #e2eaf7;color: #2f5aa2;border: none;}
-[data-bs-theme=dark] #toTop {background-color: rgb(45 38 72);border: 1px solid #42287d;}
+[data-bs-theme=dark] #toTop {background: #2d2648;color: #2f5aa2;border: 1px solid #42287d;}
 
 /* A Link Color*/
  a{color:#7d4698;text-decoration:none;background-color:rgba(0,0,0,0);-webkit-text-decoration-skip:objects}
